# strata

./: .dockerignore  .env.example  .gitignore  Dockerfile  EVAL_METRICS_real.md  LICENSE  PROJECT_METRICS.md  README.md  RUNTIME_METRICS.md  demo.tape  docker-compose.yml  eval_metrics.json  eval_metrics_real.json  project_metrics.json  pyproject.toml  runtime_metrics.json
.github/workflows/: ci.yml
datasets/acme_corpus/: README.md  manifest.csv
datasets/acme_corpus/documents/: confidential_financial_report_2025.md  confidential_risk_register_2025.md  internal_information_governance_policy.md  internal_product_launch_notes.md  public_company_overview.md  restricted_board_memo_robotics.md
datasets/acme_corpus/eval/: golden.jsonl
datasets/real_corpus/: README.md  manifest.csv  metrics.json  metrics.md  sources.csv
datasets/real_corpus/documents/: cisa_kev_recent_index.md  sec_aapl_2025-10-31_10k.md  sec_adbe_2026-01-15_10k.md  sec_amzn_2026-02-06_10k.md  sec_cost_2025-10-08_10k.md  sec_crm_2026-03-02_10k.md  sec_googl_2026-02-05_10k.md  sec_hd_2026-03-18_10k.md  sec_jnj_2026-02-11_10k.md  sec_jpm_2026-02-13_10k.md  sec_ma_2026-02-11_10k.md  sec_meta_2026-01-29_10k.md  sec_msft_2025-07-30_10k.md  sec_nflx_2026-01-23_10k.md  sec_nvda_2026-02-25_10k.md  sec_pg_2025-08-04_10k.md  sec_tsla_2026-01-29_10k.md  sec_unh_2026-03-02_10k.md  sec_v_2025-11-06_10k.md  sec_wmt_2026-03-13_10k.md  sec_xom_2026-02-18_10k.md
datasets/real_corpus/eval/: golden.jsonl  golden_hard.jsonl
docs/: DEMO.md  demo.tape
reports/: EVAL_METRICS.md  EVAL_METRICS_real_hard.md  eval_metrics_real_hard.json
scripts/: benchmark_retrieval.py  corpus_metrics.py  demo.sh  download_real_corpus.py  ingest_manifest.py  ingest_sample_corpus.sh  project_metrics.py  pull_models.sh
src/strata/: __init__.py  api.py  cli.py  config.py  embeddings.py  evaluation.py  healthcheck.py  llm.py  log.py  mcp_server.py  metrics.py  rerank.py  schema.py  sparse.py
src/strata/graph/: __init__.py  build.py  nodes.py  state.py
src/strata/ingest/: __init__.py  chunking.py  extract.py  loaders.py  pipeline.py  stores.py
src/strata/retrieval/: __init__.py  acl.py  answer.py  graph.py  hybrid.py  rrf.py  (+1 more)
tests/: test_api.py  test_chunking.py  test_cli.py  test_evaluation.py  test_graph_build.py  test_graph_nodes.py  test_log.py  test_mcp_server.py  test_real_corpus.py  test_retrieval_units.py  test_sample_corpus.py  test_smoke.py  test_vector_hybrid.py
tests/fixtures/: sample_policy.md
(+150 files in other folders)
